default-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: default
  namespace: rapa
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: default
  template: 
    metadata: 
      name: default
      labels: 
        app: default
    spec:
      containers: 
      - name: default
        image: nginx
        ports:
        - containerPort: 80
        resources: 
          requests: 
            cpu: 500m
            memory: 32Mi
        volumeMounts: 
        - name: default-vol
          mountPath: /usr/share/nginx/html
      volumes: 
      - name: default-vol
        nfs: 
          path: /root/k8slab/rapalab/default
          server: 211.183.3.100
---
apiVersion: v1
kind: Service
metadata:
  namespace: rapa 
  name: default
spec: 
  ports: 
  - name: default-port
    port: 80 #service
    targetPort: 80 #pod
    nodePort: 30001  #worker node
  selector:
    app: default
  type: NodePort
