news-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: news
  namespace: rapa
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: news
  template: 
    metadata: 
      name: news
      labels: 
        app: news
    spec:
      containers: 
      - name: news
        image: nginx
        ports:
        - containerPort: 80
        resources: 
          requests: 
            cpu: 500m
            memory: 32Mi
        volumeMounts: 
        - name: news-vol
          mountPath: /usr/share/nginx/html
      volumes: 
      - name: news-vol
        nfs: 
          path: /root/k8slab/rapalab/news
          server: 211.183.3.100
---
apiVersion: v1
kind: Service
metadata:
  namespace: rapa 
  name: news
spec: 
  ports: 
  - name: news-port
    port: 80 #service
    targetPort: 80 #pod
    nodePort: 30002  #worker node
  selector:
    app: news
  type: NodePort
