shop-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: shop
  namespace: rapa
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: shop
  template: 
    metadata: 
      name: shop
      labels: 
        app: shop
    spec:
      containers: 
      - name: shop
        image: nginx
        ports:
        - containerPort: 80
        resources: 
          requests: 
            cpu: 500m
            memory: 32Mi
        volumeMounts: 
        - name: shop-vol
          mountPath: /usr/share/nginx/html
      volumes: 
      - name: shop-vol
        nfs: 
          path: /root/k8slab/rapalab/shop
          server: 211.183.3.100
---
apiVersion: v1
kind: Service
metadata:
  namespace: rapa 
  name: shop
spec: 
  ports: 
  - name: shop-port
    port: 80 #service
    targetPort: 80 #pod
    nodePort: 30003  #worker node
  selector:
    app: shop
  type: NodePort
