ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: rapa 
  name: ingress-nginx
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
  - http: 
      paths: 
        - path: /
          pathType: Prefix
          backend:  
            service:  
              name: default
              port:
                number: 80
        - path: /shop
          pathType: Prefix
          backend:
            service:
              name: shop
              port:
                number: 80
        - path: /news
          pathType: Prefix
          backend:
            service:
              name: news
              port:
                number: 80
